kind/non_cancellare/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 30001
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-na
spec:
  type: LoadBalancer
  selector:
    app: frontend-na
  ports:
    - protocol: TCP
      port: 80
      targetPort: 30002
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-as
spec:
  type: LoadBalancer
  selector:
    app: frontend-as
  ports:
    - protocol: TCP
      port: 80
      targetPort: 30003
