kind/non_cancellare/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: frontend
spec:
  gatewayClassName: example
  listeners:
    - protocol: HTTP
      port: 80
      name: frontend-gw
      allowedRoutes:
        namespaces:
          from: Same
