kind/non_cancellare/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /frontend
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 5173
          - path: /frontend-na
            pathType: Prefix
            backend:
              service:
                name: frontend-na
                port:
                  number: 5174
          - path: /frontend-as
            pathType: Prefix
            backend:
              service:
                name: frontend-as
                port:
                  number: 5175
